Fix wrapping of popup by just widening it.

--- a/extensions/wtf-injector-chrome/popup.less
+++ b/extensions/wtf-injector-chrome/popup.less
@@ -21,7 +21,7 @@ body {
 }
 
 .buttonBar {
-  min-width: 608px;
+  min-width: 612px;
   white-space: nowrap;
 }
 
